[package]
name = "stream-operators"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pin-project-lite = "0.2.9"
tokio = "1.21.2"
tokio-stream = "0.1.11"

[dev-dependencies]
futures = "0.3.25"
tokio = { version = "1.21.2", features = ["rt", "macros"] }
