[package]
name = "stream-operators"
version = "0.1.0"
edition = "2021"
license = "MIT"
documentation = "https://docs.rs/stream-operators"
repository = "https://github.com/tyrchen/stream-operators"
homepage = "https://github.com/tyrchen/stream-operators"
description = """
a collection of selected rxjs operators for rust standard Stream
"""
readme = "README.md"
categories = ["asynchronous"]
keywords = ["reactive", "stream", "operator"]

[dependencies]
pin-project-lite = "0.2.9"
tokio = "1.21.2"
tokio-stream = "0.1.11"

[dev-dependencies]
futures = "0.3.25"
tokio = { version = "1.21.2", features = ["rt", "macros"] }
